--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3920,7 +3920,7 @@ layers:
                     draw:
                         text-blend-order:
                             text_source: global.ux_language_text_source_boundary_lines
-                            offset: 0px
+                            offset: [0px, 0px]
         other_country_boundary_disputed_etc:
             filter: { kind: [disputed, indefinite, indeterminate, lease_limit, line_of_control, overlay_limit] }
             draw:
@@ -3978,7 +3978,7 @@ layers:
                     draw:
                         text-blend-order:
                             text_source: global.ux_language_text_source_boundary_lines
-                            offset: 0px
+                            offset: [0px, 0px]
 
     places:
         data: { source: mapzen, layer: places }
