--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -433,8 +433,8 @@ fonts:
 
 sources:
     mapzen:
-        type:  MVT #TopoJSON
-        url:  https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
+        type: TopoJSON #MVT
+        url:  https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.topojson
         #url:  https://dev-tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
         url_params:
             api_key: global.sdk_api_key
