--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2989,6 +2989,7 @@ layers:
                                 /^AM:AM.*$/.test(feature.network) ||
                                 /^AR:AR.*$/.test(feature.network) ||
                                 /^AR:PR.*$/.test(feature.network) ||
+                                /^AsianHighway$/.test(feature.network) ||
                                 /^AT:A.*$/.test(feature.network) ||
                                 /^AT:L.*$/.test(feature.network) ||
                                 /^AT:S.*$/.test(feature.network) ||
@@ -3003,6 +3004,8 @@ layers:
                                 /^AU:TD.*$/.test(feature.network) ||
                                 /^BD:NH.*$/.test(feature.network) ||
                                 /^BE:I.*$/.test(feature.network) ||
+                                /^BE:A-road.*$/.test(feature.network) ||
+                                /^BE:N-road.*$/.test(feature.network) ||
                                 /^BR$/.test(feature.network) ||
                                 /^BR:.*$/.test(feature.network) ||
                                 /^BR.*$/.test(feature.network) ||
@@ -3113,9 +3116,11 @@ layers:
                                 /^SK:I.*$/.test(feature.network) ||
                                 /^SK:LR.*$/.test(feature.network) ||
                                 /^SK:SK.*$/.test(feature.network) ||
+                                /^TH-network.*$/.test(feature.network) ||
                                 /^TH:TH.*$/.test(feature.network) ||
                                 /^TH:TM2.*$/.test(feature.network) ||
                                 /^TH:TM3.*$/.test(feature.network) ||
+                                /^TH-roads.*$/.test(feature.network) ||
                                 /^TR:DY.*$/.test(feature.network) ||
                                 /^TR:OR.*$/.test(feature.network) ||
                                 /^TR-roads.*$/.test(feature.network) ||
@@ -3127,26 +3132,24 @@ layers:
                                 /^UK:A.*$/.test(feature.network) ||
                                 /^UK:G.*$/.test(feature.network) ||
                                 /^UK:M.*$/.test(feature.network) ||
+                                /^motorway.*$/.test(feature.network) ||
+                                /^my:federal.*$/.test(feature.network) ||
+                                /^no:Fylkesvei.*$/.test(feature.network) ||
+                                /^no:Fylkesvei .*$/.test(feature.network)||
+                                /^pe:national.*$/.test(feature.network) ||
+                                /^GR.*$/.test(feature.network) ||
+                                /^pl:expressways$/.test(feature.network) ||
+                                /^PT:regional.*$/.test(feature.network) ||
                                 /^VN:I.*$/.test(feature.network) ||
                                 /^VN:PR.*$/.test(feature.network) ||
                                 /^VN:VN.*$/.test(feature.network) ||
+                                /^VN:national.*$/.test(feature.network) ||
+                                /^VN-roads.*$/.test(feature.network) ||
                                 /^ZA:M.*$/.test(feature.network) ||
                                 /^ZA:P.*$/.test(feature.network) ||
                                 /^za:national.*$/.test(feature.network) ||
                                 /^za:regional.*$/.test(feature.network) ||
-                                /^za:capetown.*$/.test(feature.network) ||
-                                /^motorway.*$/.test(feature.network) ||
-                                /^no:Fylkesvei.*$/.test(feature.network) ||
-                                /^no:Fylkesvei .*$/.test(feature.network)||
-                                /^pe:national.*$/.test(feature.network) ||
-                                /^BE:A-road.*$/.test(feature.network) ||
-                                /^BE:N-road.*$/.test(feature.network) ||
-                                /^GR.*$/.test(feature.network) ||
-                                /^AsianHighway$/.test(feature.network) ||
-                                /^pl:expressways$/.test(feature.network) ||
-                                /^PT:regional.*$/.test(feature.network) ||
-                                /^VN:national.*$/.test(feature.network) ||
-                                /^my:federal.*$/.test(feature.network)
+                                /^za:capetown.*$/.test(feature.network)
                             )
                         }
                     draw:
@@ -3898,8 +3901,11 @@ layers:
                             mapzen_icon_library:
                                 sprite: |
                                     function() {
-                                        return ( 'IN:NH-' + feature.shield_text.length + 'char');
+                                        return ( 'CH:E-' + feature.shield_text.length + 'char');
                                     }
+                                text:
+                                    font:
+                                        fill: [1.000,1.000,1.000]
 
                         # Asian Highway/E - expressways in Malaysia - yellow shields - http://localhost:8000/#10/4.8919/101.1827
                         E-AsianHighway:
@@ -4244,6 +4250,56 @@ layers:
                                     font:
                                         fill: [1.00,1.00,1.00]
 
+                    ###
+                    ### THAILAND
+                    ###
+                    TH-roads:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^TH-roads$/.test(feature.network)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'TH:TH-' + feature.shield_text.length + 'char');
+                                    }
+                                text:
+                                    offset: [0px, 4px]
+
+                    TH-network:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^TH-network$/.test(feature.network)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'TH:TH-' + feature.shield_text.length + 'char');
+                                    }
+                                text:
+                                    offset: [0px, 4px]
+
+                    VN-roads:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^VN-roads$/.test(feature.network)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'TH:TH-' + feature.shield_text.length + 'char');
+                                    }
+                                text:
+                                    offset: [0px, 4px]
 
                     ###
                     ### NORWAY
